# catalyst-tools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Catalyst_nnunet_notes.ipynb  Dockerfile  LICENSE.txt  Makefile  README.md  colormap_importer_11_17_2025.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  settings.yml
.github/workflows/: branch_push.yaml  issue_cleanup.yaml  issue_create.yaml  pull_request.yaml  tag_push.yaml
SegThy_nnUnet/: README.md
analysis/: CSA_analysis.ipynb  analysis.py  segthy_volumetrics_csa_summary.xlsx  summary.xlsx
analysis/ModelB/: analysis.py
catalyst_preprocessed/Dataset312_ModelA/: dataset.json  splits_final.json
catalyst_preprocessed/Dataset312_ModelA/nnUNetPlans_2d/: CASE-003-P3-1-RIGHT_seg.b2nd  CASE-007-P3-1-LEFT.b2nd  CASE-011-P2-3-LEFT.b2nd  CASE-021-P3-1-RIGHT.b2nd  CASE-024-P3-1-RIGHT.b2nd  CASE-028-P3-1-RIGHT.b2nd
catalyst_preprocessed/Dataset312_ModelA/nnUNetPlans_3d_fullres/: CASE-005-P1-1-LEFT.b2nd  CASE-007-P3-1-LEFT_seg.b2nd  CASE-008-P1-1-RIGHT.pkl  CASE-011-P2-3-LEFT_seg.b2nd  CASE-014-P3-1-RIGHT.b2nd  CASE-020-P2-1-LEFT_seg.b2nd  CASE-028-P3-1-LEFT.b2nd  CASE-028-P3-1-RIGHT.b2nd
catalyst_preprocessed/Dataset312_ModelA/nnUNetResEncUNetMPlans_3d_lowres/: CASE-001-P1-1-RIGHT.b2nd  CASE-001-P1-1-RIGHT.pkl  CASE-001-P1-1-RIGHT_seg.b2nd  CASE-002-P2-2-LEFT.b2nd  CASE-002-P2-2-LEFT.pkl  CASE-002-P2-2-LEFT_seg.b2nd  CASE-002-P2-2-RIGHT.b2nd  CASE-002-P2-2-RIGHT.pkl  CASE-002-P2-2-RIGHT_seg.b2nd  CASE-003-P3-1-LEFT.b2nd  CASE-003-P3-1-LEFT.pkl  CASE-003-P3-1-LEFT_seg.b2nd  CASE-003-P3-1-RIGHT.b2nd  CASE-003-P3-1-RIGHT.pkl  CASE-003-P3-1-RIGHT_seg.b2nd  CASE-005-P1-1-LEFT.b2nd  CASE-005-P1-1-LEFT.pkl  CASE-005-P1-1-LEFT_seg.b2nd  CASE-007-P3-1-LEFT.b2nd  CASE-007-P3-1-LEFT.pkl  CASE-007-P3-1-LEFT_seg.b2nd  CASE-008-P1-1-RIGHT.b2nd  CASE-008-P1-1-RIGHT.pkl  CASE-008-P1-1-RIGHT_seg.b2nd  CASE-011-P2-3-LEFT.b2nd  CASE-011-P2-3-LEFT.pkl  CASE-011-P2-3-LEFT_seg.b2nd  CASE-014-P3-1-LEFT.b2nd  CASE-014-P3-1-LEFT.pkl  CASE-014-P3-1-LEFT_seg.b2nd  CASE-014-P3-1-RIGHT.b2nd  CASE-014-P3-1-RIGHT.pkl  CASE-014-P3-1-RIGHT_seg.b2nd  CASE-015-P1-1-LEFT.b2nd  CASE-015-P1-1-LEFT.pkl  CASE-015-P1-1-LEFT_seg.b2nd  CASE-015-P1-1-RIGHT.b2nd  CASE-015-P1-1-RIGHT.pkl  CASE-015-P1-1-RIGHT_seg.b2nd  CASE-020-P2-1-LEFT.b2nd  (+32 more)
catalyst_preprocessed/Dataset313_ModelB/: splits_final.json
catalyst_preprocessed/Dataset313_ModelB/nnUNetPlans_2d/: CASE-001-P1-1-RIGHT.b2nd  CASE-014-P3-1-RIGHT_seg.b2nd  CASE-015-P1-1-LEFT.b2nd  CASE-015-P1-1-RIGHT_seg.b2nd  CASE-020-P2-1-LEFT.pkl  CASE-021-P3-1-LEFT_seg.b2nd  CASE-021-P3-1-RIGHT_seg.b2nd  CASE-026-P2-2-RIGHT.b2nd  CASE-026-P2-2-RIGHT.pkl  CASE-028-P3-1-LEFT_seg.b2nd  CASE-029-P2-1-LEFT_seg.b2nd  xl_lateral_right_seg.b2nd
catalyst_preprocessed/Dataset313_ModelB/nnUNetPlans_3d_fullres/: CASE-002-P2-2-LEFT_seg.b2nd  CASE-002-P2-2-RIGHT.pkl  CASE-003-P3-1-RIGHT.b2nd  CASE-008-P1-1-RIGHT.b2nd  CASE-011-P2-3-LEFT.b2nd  CASE-014-P3-1-LEFT.b2nd  CASE-014-P3-1-LEFT_seg.b2nd  CASE-015-P1-1-LEFT_seg.b2nd  CASE-021-P3-1-RIGHT_seg.b2nd  CASE-029-P2-1-LEFT.b2nd
catalyst_preprocessed/Dataset313_ModelB/nnUNetResEncUNetMPlans_3d_lowres/: CASE-002-P2-2-RIGHT.b2nd  CASE-005-P1-1-LEFT.b2nd  CASE-007-P3-1-LEFT.b2nd  CASE-015-P1-1-LEFT_seg.b2nd  CASE-020-P2-1-LEFT.pkl  CASE-020-P2-1-RIGHT_seg.b2nd  CASE-021-P3-1-LEFT.b2nd  CASE-021-P3-1-LEFT.pkl  CASE-021-P3-1-RIGHT.pkl  CASE-026-P2-2-RIGHT_seg.b2nd  CASE-028-P3-1-LEFT_seg.b2nd  CASE-029-P2-1-LEFT_seg.b2nd  xl_anterolateral_right_seg.b2nd  xl_lateral_right.pkl
catalyst_preprocessed/Dataset314_ModelC/: dataset.json  dataset_fingerprint.json  nnUNetResEncUNetMPlans.json  splits_final.json
catalyst_preprocessed/Dataset314_ModelC/nnUNetPlans_2d/: CASE-001-P1-1-RIGHT_seg.b2nd  CASE-002-P2-2-RIGHT.b2nd  CASE-014-P3-1-LEFT.b2nd  CASE-014-P3-1-RIGHT.b2nd  CASE-020-P2-1-RIGHT.b2nd  CASE-020-P2-1-RIGHT.pkl  CASE-026-P2-2-LEFT.pkl  l_anterolateral_right.b2nd  l_anterolateral_right_seg.b2nd  l_lateral_right.pkl  l_lateral_right_seg.b2nd  xl_anterolateral_right.b2nd  xl_anterolateral_right_seg.b2nd  xl_lateral_right.b2nd
catalyst_preprocessed/Dataset314_ModelC/nnUNetPlans_3d_fullres/: CASE-001-P1-1-RIGHT_seg.b2nd  CASE-002-P2-2-RIGHT_seg.b2nd  CASE-005-P1-1-LEFT.pkl  CASE-014-P3-1-RIGHT.pkl  CASE-020-P2-1-RIGHT_seg.b2nd  CASE-021-P3-1-RIGHT.pkl  CASE-024-P3-1-LEFT_seg.b2nd  CASE-024-P3-1-RIGHT.pkl  (+4 more)
catalyst_preprocessed/Dataset315_ModelD/: dataset.json  dataset_fingerprint.json  nnUNetResEncUNetMPlans.json
catalyst_preprocessed/Dataset316_ModelE/: dataset_fingerprint.json  nnUNetResEncUNetMPlans.json
catalyst_preprocessed/Dataset317_ModelF/: dataset_fingerprint.json  splits_final.json
catalyst_preprocessed/Dataset318_ModelG/: dataset_fingerprint.json  nnUNetResEncUNetMPlans.json
catalyst_preprocessed/Dataset320_ModelI/: dataset.json  dataset_fingerprint.json  nnUNetResEncUNetMPlans.json
catalyst_raw/Dataset313_ModelB/: dataset.json
catalyst_raw/Dataset316_ModelE/: dataset.json
catalyst_raw/Dataset317_ModelF/: dataset.json
docs/: conf.py  index.rst
docs/_templates/: module.rst_t  package.rst_t
scripts/: batch_nnunetv2.ps1  batch_nnunetv2_configs.ps1  compile_segment3_volumes_tsv.py  evaluate_medpy.py  ijv_cross_sections.py  scanslice_ colormap_importer.py  scanslice_colormap_importer.py  segthy_rename.py  training_protocol.ps1
segthy_training_data/: README.md
slicer/nnunet_extension_mod/: SlicerNNUNet.py
src/ml_py_project/: __init__.py  example.py  main.py
tests/: __init__.py  conftest.py  test_placeholder.py  test_validation_datageneration.py  test_validation_inference.py  test_validation_train.py
tests/templates/: report_parameters.json  template.docx
(+656 files in other folders)
